--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.7', '3.8', '3.9', '3.10']
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest,]
         include:
           - os: ubuntu-latest
             cache-path: ~/.cache/pypoetry/virtualenvs
