--- a/tests/mypy/test_decorators.yml
+++ b/tests/mypy/test_decorators.yml
@@ -36,3 +36,29 @@
     NameInterface(n="Patrick")
   out: |
     main:8: error: Unexpected keyword argument "n" for "NameInterface"
+
+- case: test_federation_type
+  main: |
+    import strawberry
+
+    @strawberry.federation.type
+    class User:
+        name: str
+
+    User(name="Patrick")
+    User(n="Patrick")
+  out: |
+    main:8: error: Unexpected keyword argument "n" for "User"
+
+- case: test_federation_input
+  main: |
+    import strawberry
+
+    @strawberry.input
+    class EditUserInput:
+        name: str
+
+    EditUserInput(name="Patrick")
+    EditUserInput(n="Patrick")
+  out: |
+    main:8: error: Unexpected keyword argument "n" for "EditUserInput"
