--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -113,9 +113,14 @@ jobs:
 
   mypy:
     runs-on: ubuntu-latest
-    container: python:3.9
 
     steps:
+      - uses: actions/setup-python@v2
+        id: setup-python
+        with:
+          python-version: '3.10'
+          architecture: x64
+
       - uses: actions/checkout@v2
 
       - run: pip install poetry
