--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,7 +59,7 @@ jobs:
       - name: pytest
         run: poetry run pytest --cov-report xml --cov=. --showlocals -vv -m "not django"
 
-      - uses: coverallsapp/github-action@v1.1.3
+      - uses: coverallsapp/github-action@1.1.3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
