--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -101,9 +101,6 @@ jobs:
       - name: pytest
         run: poetry run pytest --cov-report xml --cov=. --showlocals -vv -m django
 
-      - uses: codecov/codecov-action@v1
-        if: ${{ always() }}
+      - uses: coverallsapp/github-action@1.1.3
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          fail_ci_if_error: true
-          verbose: true
+          github-token: ${{ secrets.GITHUB_TOKEN }}
