--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,7 +57,7 @@ jobs:
         if: steps.cache-poetry-dependencies.outputs.cache-hit != 'true'
 
       - name: pytest
-        run: poetry run pytest --cov-report xml --cov=. --showlocals -vv -m "not django"
+        run: poetry run pytest --cov --showlocals -vv -m "not django"
 
       - uses: coverallsapp/github-action@1.1.3
         with:
@@ -99,7 +99,7 @@ jobs:
         run: poetry add django==${{ matrix.django }}
 
       - name: pytest
-        run: poetry run pytest --cov-report xml --cov=. --showlocals -vv -m django
+        run: poetry run pytest --cov --showlocals -vv -m django
 
       - uses: coverallsapp/github-action@1.1.3
         with:
