--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,10 @@ starlette = {version = ">=0.13.6,<0.17.0", optional = true}
 click = {version = ">=7.0,<9.0", optional = true}
 pygments = "^2.3"
 uvicorn = {version = ">=0.11.6,<0.16.0", optional = true}
-django = {version = ">=2,<4", optional = true}
+Django = [
+    {version = ">=2.2,<4", python = "<3.8", optional = true},
+    {version = ">=2.2,<5", python = ">=3.8", optional = true}
+]
 graphql-core = "~3.1.0"
 asgiref = {version = "^3.2", optional = true}
 flask = {version = "^1.1", optional = true}
@@ -74,7 +77,10 @@ opentelemetry-api = "<2"
 opentelemetry-sdk = "<2"
 flake8-isort = "^4.1.1"
 flake8-black = "^0.2.1"
-django = {version = ">=2,<4", optional = false}
+Django = [
+    {version = ">=2.2,<4", python = "<3.8", optional = false},
+    {version = ">=2.2,<5", python = ">=3.8", optional = false}
+]
 pydantic = {version = "<2", optional = false}
 email-validator = {version = "^1.1.3", optional = false}
 starlette = ">=0.13.6,<0.17.0"
