--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,8 +32,8 @@ click = {version = ">=7.0,<9.0", optional = true}
 pygments = "^2.3"
 uvicorn = {version = ">=0.11.6,<0.16.0", optional = true}
 Django = [
-    {version = ">=2.2,<4", python = "<3.8", optional = true},
-    {version = ">=2.2,<5", python = ">=3.8", optional = true}
+    {version = ">=2.2,<4", markers = "python_version < '3.8' and extra == 'django'", optional = true},
+    {version = ">=2.2,<5", markers = "python_version >= '3.8' and extra == 'django'", optional = true}
 ]
 graphql-core = "~3.1.0"
 asgiref = {version = "^3.2", optional = true}
@@ -106,7 +106,7 @@ pytest-xprocess = "^0.18.1"
 aiohttp = ["aiohttp", "pytest-aiohttp"]
 asgi = ["starlette"]
 debug-server = ["starlette", "uvicorn"]
-django = ["django", "pytest-django", "asgiref"]
+django = ["Django", "pytest-django", "asgiref"]
 flask = ["flask", "pytest-flask"]
 opentelemetry = ["opentelemetry-api", "opentelemetry-sdk"]
 pydantic = ["pydantic"]
